--- a/index.html
+++ b/index.html
@@ -1,1 +1,140 @@
-website
+<link href="https://fonts.googleapis.com/css?family=Cairo|Scheherazade" rel="stylesheet">
+<style type="text/css">
+	body{
+		padding: 0px;
+		margin: 0px;
+		/*font-family: 'Scheherazade', serif;*/
+		font-family: 'Cairo', sans-serif;
+		color: #444;
+	}
+	.Loader{
+		width: 100%;
+		height:100vh;
+		background: #fff;
+		position: fixed;
+		z-index: 999999;
+	}
+	.cent{
+		position: absolute;
+	  	left:30%;
+	  	top:32%;
+
+	}
+	.sk-cube-grid {
+	  width: 60px;
+	  height: 60px;
+	  position: absolute;
+	  left:46%;
+	  top:46%;
+	  z-index: 9999999;
+	}
+
+	.sk-cube-grid .sk-cube {
+	  width: 33%;
+	  height: 33%;
+	  background-color: #e63b02;
+	  float: left;
+	  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+	          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+	}
+	.sk-cube-grid .sk-cube1 {
+	  -webkit-animation-delay: 0.2s;
+	          animation-delay: 0.2s; }
+	.sk-cube-grid .sk-cube2 {
+	  -webkit-animation-delay: 0.3s;
+	          animation-delay: 0.3s; }
+	.sk-cube-grid .sk-cube3 {
+	  -webkit-animation-delay: 0.4s;
+	          animation-delay: 0.4s; }
+	.sk-cube-grid .sk-cube4 {
+	  -webkit-animation-delay: 0.1s;
+	          animation-delay: 0.1s; }
+	.sk-cube-grid .sk-cube5 {
+	  -webkit-animation-delay: 0.2s;
+	          animation-delay: 0.2s; }
+	.sk-cube-grid .sk-cube6 {
+	  -webkit-animation-delay: 0.3s;
+	          animation-delay: 0.3s; }
+	.sk-cube-grid .sk-cube7 {
+	  -webkit-animation-delay: 0s;
+	          animation-delay: 0s; }
+	.sk-cube-grid .sk-cube8 {
+	  -webkit-animation-delay: 0.1s;
+	          animation-delay: 0.1s; }
+	.sk-cube-grid .sk-cube9 {
+	  -webkit-animation-delay: 0.2s;
+	          animation-delay: 0.2s; }
+
+	@-webkit-keyframes sk-cubeGridScaleDelay {
+	  0%, 70%, 100% {
+	    -webkit-transform: scale3D(1, 1, 1);
+	            transform: scale3D(1, 1, 1);
+	  } 35% {
+	    -webkit-transform: scale3D(0, 0, 1);
+	            transform: scale3D(0, 0, 1); 
+	  }
+	}
+
+	@keyframes sk-cubeGridScaleDelay {
+	  0%, 70%, 100% {
+	    -webkit-transform: scale3D(1, 1, 1);
+	            transform: scale3D(1, 1, 1);
+	  } 35% {
+	    -webkit-transform: scale3D(0, 0, 1);
+	            transform: scale3D(0, 0, 1);
+	  } 
+	}
+	.item{
+		height: 100%;
+
+		float: right;
+		margin-right:5%;
+		text-align: center;
+	}
+	.texx{
+		padding-top: 25px;
+	    font-size: 33px;
+	    color: #e1400a;
+	}
+</style>
+<div class="Loader">
+	<div class="sk-cube-grid ">
+	  <div class="sk-cube sk-cube1"></div>
+	  <div class="sk-cube sk-cube2"></div>
+	  <div class="sk-cube sk-cube3"></div>
+	  <div class="sk-cube sk-cube4"></div>
+	  <div class="sk-cube sk-cube5"></div>
+	  <div class="sk-cube sk-cube6"></div>
+	  <div class="sk-cube sk-cube7"></div>
+	  <div class="sk-cube sk-cube8"></div>
+	  <div class="sk-cube sk-cube9"></div>
+	</div>
+</div>
+
+
+<body>
+	<div id="preloader"></div>
+	<div class="cent" >
+		<img src="imgs/yetech_logo.png" style="width: 200px;margin-left: 32%;" >
+		<div style="    text-align: center;
+	    font-size: 21px;
+	    color: #555;">واي.تك لبرمجة وتطوير مواقع الويب وتطبيقات الهواتف , قريباً
+	    </div>
+	    <a href="./estra7ah_manager"><img src="imgs/estlogo.jpg" style="width: 200px;margin-left: 32%;" ></a>
+	</div>
+</body>
+
+<script src="js/jq.js"></script>
+<script type="text/javascript">
+	$(window).load(function(){
+
+		setTimeout(function(){
+			$(".Loader").fadeOut(function(){
+				
+			});
+		},1000);
+
+	});
+</script>
+
+
