--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 								<div style="    padding: 57px;">
 									<h1>في الاصدار القادم</h1>
 									<ul style="font-size: 15px;">
-										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقرائة والبحث في الكتب تدعم الهواتف </li>
+										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقراءة والبحث في الكتب تدعم الهواتف </li>
 										<li>دعم صيغ اكثر واضافة ثيمات جديدة للاستراحة</li>
 										<li>انشاء نظام ادارة مستخدمين لدعم التعليقات والتقييم</li>
 										<li>انشاء دردشه عامه بين مستخدمين الشبكة مع لوحة ادارية لمدير الشبكة</li>
@@ -426,7 +426,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 				<div class="row">
 					<div class="col-md-12 " >
 						<div class="row">
-							<div style="padding: 20px;">
+							<div style="padding: 50px;">
 								<div class="col-md-4 " >
 									<img style="width: 71%;" src="./imgs/yetech_logo_trans.png">
 									
