--- a/index.html
+++ b/index.html
@@ -307,6 +307,30 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 									<div>واي.تيك هي شركة يمنية ناشئة  لتطوير مواقع الويب وتطبيقات الموبايل 
 										نقدم حلول ذكية ومناسبه لعملائنا .
 									</div>
+									<style type="text/css">
+										.links{
+										    padding: 8px;
+										    background: #3e3e3e;
+										    color: #fff;
+										    margin: 12px;
+										    border-radius: 9px;
+										    padding-left: 16px;
+										    padding-right: 16px;
+										    transition: 0.7s all ease;
+										}
+										.links:hover{
+										    
+										    background: #eee;
+										    color: #3e3e3e;
+										    
+										}
+									</style>
+									<div style="padding: 20px;">
+										<a href="https://www.facebook.com/YeTech-1243197179127908/" class="links"><span class="fa fa-facebook"></span></a>
+										<a href="#" class="links"><span class="fa fa-twitter"></span></a>
+										<a href="#" class="links"><span class="fa fa-instagram"></span></a>
+
+									</div>
 								</div>
 								<div class="col-md-4 " style="margin-top: 20px;" >
 	
