--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 							</ul>
 						</div>
 						<div class="sec" id="connect" style="padding: 53px;text-align: center;font-size: 20px;">
-							لطلب النسخه ارسل راسله طلب الى الايميل YeTech.Devs@gmail.com مع الترخيص المطلوب وسيتم اعلامك ببيانات الدفع (نتعامل بالتحويل الى الكريمي حالياً) 
+							لطلب النسخه ارسل راسله طلب الى الايميل YeTech.Devs@gmail.com وسيتم ارسال رسالة بملف الترخيص + نسخه من النظام  (نتعامل بالتحويل الى الكريمي حالياً) 
 							<div style="margin:20px;padding: 20px;background: #eee;"><a href="mailto:YeTech.Devs@gmail.com">YeTech.Devs@gmail.com</a></div>
 						</div>
 					</div>
