--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 										<li>خاصية البحث الذكي في الاقسام والملفات </li>
 									</ul>
 									<button class="btn try_btn" style=""><span class="fa fa-windows"></span> جرّب النظام الان مجاناً</button>
-									<button class="btn lic_btn" style=""><span class="fa fa-copyright"></span> الرُخص المتاحة</button>
+									<button class="btn lic_btn" style=""> الرُخص المتاحة</button>
 									<script type="text/javascript">
 										$(".lic_btn").click(function(){
 											var offset = -120; //Offset of 20px
