--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 							<h4>متطلبات النظام (للسيرفر) :</h4>
 							<ul>
 								<li>ويندوز 7 او احدث</li>
-								<li>معالج Dual Core  او احدث</li>
+								<li>معالج Intel® Core™ i3  او احدث</li>
 								<li>ذاكرة عشوائية بحجم 2 جيجا او اكثر (ليدعم الـStreaming)</li>
 								<li>مساحة 300 ميجا بايت فارغة لتحميل النظام </li>
 							</ul>
