--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 						<div class="sec" style="height: 475px;">
 							<div class="title"> ترخيص محلي</div>
 							<div class="icon"><span class="fa fa-home"></span></div>
-							<div class="mon"><b><span class="fa fa-dollar"></span> 20  فقط </b></div>
+							<div class="mon"><b><span class="fa fa-dollar"></span> 20   </b></div>
 							<div class="dits">
 								<ul>
 									<li class="good">يمكنك التمتع بكل الخصائص والميزات</li>
 									<li class="good">دعم متواصل في حال وجود مشاكل</li>
 									<li class="wrn">لا يمكنك التحديث لاصدار جديد</li>
-									<li class="wrn">محدود لشهرين فقط</li>
+									<li class="wrn">محدود لشهرين </li>
 									<li class="wrn">لايتوفر ملف html لتعديل التصميم</li>
 								</ul>
 							</div>
@@ -185,13 +185,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 							<div class="sec" style="height: 475px;">
 								<div class="title"> ترخيص احترافي</div>
 								<div class="icon"><span class="fa  fa-suitcase"></span></div>
-								<div class="mon"><b><span class="fa fa-dollar"></span> 30  فقط </b></div>
+								<div class="mon"><b><span class="fa fa-dollar"></span> 30   </b></div>
 								<div class="dits">
 									<ul>
 										<li class="good">يمكنك التمتع بكل الخصائص والميزات</li>
 										<li class="good">دعم متواصل في حال وجود مشاكل</li>
 										<li class="wrn-1">يمكنك التحديث لاصدار واحده جديد من النظام</li>
-										<li class="wrn-1">محدود ل 4 اشهر فقط</li>
+										<li class="wrn-1">محدود ل 4 اشهر </li>
 										<li class="wrn">لايتوفر ملف html لتعديل التصميم</li>
 									</ul>
 								</div>
@@ -203,13 +203,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 							<div class="sec" style="height: 475px;">
 								<div class="title"> ترخيص نهائي</div>
 								<div class="icon"><span class="fa  fa-rocket"></span></div>
-								<div class="mon"><b><span class="fa fa-dollar"></span> 40  فقط </b></div>
+								<div class="mon"><b><span class="fa fa-dollar"></span> 40   </b></div>
 								<div class="dits">
 									<ul>
 										<li class="good">يمكنك التمتع بكل الخصائص والميزات</li>
 										<li class="good">دعم متواصل في حال وجود مشاكل</li>
 										<li class="wrn-2">يمكنك التحديث لاصدارين جدد من النظام</li>
-										<li class="wrn-2">محدود ل 8 اشهر فقط</li>
+										<li class="wrn-2">محدود ل 8 اشهر </li>
 										<li class="wrn">لايتوفر ملف html لتعديل التصميم</li>
 									</ul>
 								</div>
@@ -220,7 +220,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 						<div class="sec" style="height: 475px;">
 							<div class="title"> ترخيص نهائي كامل</div>
 							<div class="icon"><span class="fa fa-trophy"></span></div>
-							<div class="mon"><b><span class="fa fa-dollar"></span> 100  فقط </b></div>
+							<div class="mon"><b><span class="fa fa-dollar"></span> 100   </b></div>
 							<div class="dits">
 								<ul>
 									<li class="good">يمكنك التمتع بكل الخصائص والميزات</li>
