--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقراءة والبحث في الكتب تدعم الهواتف </li>
 										<li>دعم صيغ اكثر واضافة ثيمات جديدة للاستراحة</li>
 										<li>انشاء نظام ادارة مستخدمين لدعم التعليقات والتقييم</li>
-										<li>انشاء دردشه عامه بين مستخدمين الشبكة مع لوحة ادارية لمدير الشبكة</li>
+										<li>انشاء دردشه عامه بين مستخدمين الشبكة مع قسم ادارة الدردشة لمدير الشبكة</li>
 									</ul>
 								</div>
 
