--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
         
-        <title>YeTech | واي.تيك</title>
+        <title>YeTech Developers</title>
 
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <link href="./css/bootstrap-rtl.css" rel="stylesheet">
@@ -47,7 +47,7 @@
 			<img src="imgs/yetech_logo.png" style="width: 200px;margin-left: 32%;" >
 			<div style="    text-align: center;
 		    font-size: 21px;
-		    color: #555;">واي.تك لبرمجة وتطوير مواقع الويب وتطبيقات الهواتف , قريباً
+		    color: #555;">ياي.تك لبرمجة وتطوير مواقع الويب وتطبيقات الهواتف , قريباً
 		    </div>
 		    <a href="./estra7ah_manager"><img src="imgs/estlogo.jpg" style="width: 200px;margin-left: 32%;" ></a>
 		</div>-->
@@ -304,7 +304,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 									
 								</div>
 								<div class="col-md-4 " style="margin-top: 20px;" >
-									<div>واي.تيك هي شركة يمنية ناشئة  لتطوير مواقع الويب وتطبيقات الموبايل 
+									<div>ياي.تيك هي شركة يمنية ناشئة  لتطوير مواقع الويب وتطبيقات الموبايل 
 										نقدم حلول ذكية ومناسبه لعملائنا .
 									</div>
 									<style type="text/css">
