--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html dir="ltr" lang="ar"  >
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"  />
-        <meta name="keywords" content="Developer , Coder , Web Developer , Games Developer , Full-Stack Developer , PHP Developer">
-        <meta name="description" content="Full-Stack & Mobile Developer , WebGL, AngularJS, JQuery,, WebSockets, Node.js,CSS3, HTML5, Unity, GLSL ">
-        <meta name="author" content="Abdullah Altahery">
-        <meta name="copyright" content="Abdullah Altahery">
+        <meta name="description" content="ياي.تيك هي شركة يمنية ناشئة  لتطوير مواقع الويب وتطبيقات الموبايل نقدم حلول ذكية ومناسبه لعملائنا .">
+        <meta name="author" content="YeTech">
+        <meta name="copyright" content="YeTech">
         <meta name="robots" content="index, follow">
         <meta http-equiv="content-type" content="text/html;UTF-8">
         <meta http-equiv="cache-control" content="no-tcache">
