--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					    border-radius: 8px;
 					    top: 83px;
 					    font-size: 11px;
-    "><div>تم حجز 3 نسخ شكراً لكم !</div>تخفيض 50% لاول خمسة عملاء</div>
+    "><div>تم حجز 3 رخص شكراً لكم</div>تخفيض 50% لاول خمسة عملاء</div>
 			<div class="container " id="prods">
 				<div class="row">
 					<div class="col-md-12 " style="color:#fff">
