--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 					<div class="col-md-12 " >
 						<div class="sec" id="support" style="padding: 40px;font-size: 15px;">
 							<h4>متطلبات النظام (للسيرفر) :</h4>
+							<div class="alert alert-info ">
+								بالنسبه للكهرباء يمكنك تشغيل السيرفر على لابتوب mini مثل Toshiba mini NB255 والذي يعمل 9 ساعات بدون كهرباء مع التعئبة سيعمل 15 ساعه كحد ادنى ! 
+							</div>
 							<ul>
 								<li>ويندوز 7 او احدث</li>
 								<li>معالج Intel® Core™ i3  او احدث</li>
