--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 										<li>انشاء دردشه عامه بين مستخدمين الشبكة مع قسم ادارة الدردشة لمدير الشبكة</li>
 									</ul>
 								</div>
-								<div class="alert alert-info ">
+								<div class="alert alert-info " style="margin-right: 20px;margin: 0px;">
 									يقوم فريقنا بتطوير تطبيق اندرويد حالياً ليكون داعم للاستراحه ويمكن تنزيله على اي نظام اندرويد لكي يتم تشغيل ملفات الفيديو بافضل جودة .
 								</div>
 							</div>
 							<div class="col-md-4 " >
-								<div style="float: left;overflow: hidden;"><img style="width:160%" src="./imgs/new_bg.png"></div>
+								<div style="float: left;overflow: hidden;"><img style="width:160%;margin: -1px;" src="./imgs/new_bg.png"></div>
 							</div>
 						</div>
 
