--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 										<li>انشاء دردشه عامه بين مستخدمين الشبكة مع قسم ادارة الدردشة لمدير الشبكة</li>
 									</ul>
 								</div>
-								<div class="alert alert-info " style="margin-right: 20px;margin: 0px;">
+								<div class="alert alert-info " style="margin: 0px;margin-right: 20px;">
 									يقوم فريقنا بتطوير تطبيق اندرويد حالياً ليكون داعم للاستراحه ويمكن تنزيله على اي نظام اندرويد لكي يتم تشغيل ملفات الفيديو بافضل جودة .
 								</div>
 							</div>
