--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 										<li>يدعم الترجمات بصيغة srt تلقائياً </li>
 										<li>خاصية البحث الذكي في الاقسام والملفات </li>
 									</ul>
+									<h4 style="font-size:20px;">تمتع بخدمة تليق بشبكتك !</h4>
 									<a href="http://www.mediafire.com/file/us1zef4w1e6xnrl/Estra7ah_Manager_2.0_Demo.exe" ><button class="btn try_btn" style=""><span class="fa fa-windows"></span> جرّب النظام الان مجاناً</button></a>
 									<button class="btn lic_btn" style=""> الرُخص المتاحة</button>
 									<script type="text/javascript">
