--- a/index.html
+++ b/index.html
@@ -161,8 +161,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 			<div class="container" id="buy" style="">
 				<div class="row">
 
-
-
+					<div class="sec" >
+						<div class="alert alert-danger ">
+							لانسمح بتشغيل النسخه المجانيه في استراحتك الرئيسية بشكل تجاري .. النسخه المجانيه فقط لاستعراض واختبار فعالية النظام , يمكنك شراء رخصه تناسب شبكتك بسعر رمزي جداً يبدا من 20 دولار ! , شكراً لتفهمكم .
+						</div>
+					</div>
 					<div class="col-md-3 "  style="padding: 0px;">
 						<div class="sec" style="height: 475px;">
 							<div class="title"> ترخيص محلي</div>
@@ -309,7 +312,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 									
 								</div>
 								<div class="col-md-4 " style="margin-top: 20px;" >
-									<div>ياي.تيك هي شركة يمنية ناشئة  لتطوير مواقع الويب وتطبيقات الموبايل 
+									<div>يايتيك هي شركة يمنية ناشئة  لتطوير مواقع الويب وتطبيقات الموبايل 
 										نقدم حلول ذكية ومناسبه لعملائنا .
 									</div>
 									<style type="text/css">
