--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 									</ul>
 								</div>
 								<div class="alert alert-info " style="margin: 0px;margin-right: 20px;">
-									يقوم فريقنا بتطوير تطبيق اندرويد حالياً ليكون داعم للاستراحه ويمكن تنزيله على اي نظام اندرويد لكي يتم تشغيل ملفات الفيديو بافضل جودة .
+									يقوم فريقنا بتطوير تطبيق اندرويد حالياً ليكون داعم للاستراحه ويمكن تنزيله على اي نظام اندرويد لكي يتم تشغيل ملفات الفيديو من شبكتكم بافضل جودة .
 								</div>
 							</div>
 							<div class="col-md-4 " >
