--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 										<li>واجهة متجاوبة وتصميم مميز يناسب جميع المستخدمين</li>
 										<li>سريع الاستجابه حيث تم برمجته باحدث تقنيات الـ Video Streaming</li>
 										<li>يتميز بلوحة متعدده الخيارات وسهلة الاستخدام مع تصميم مميز وسهل </li>
-										<li>يدعم البث المباشر للقنوات مع اعادة البث لجميع اجهزة الشبكة بدون استهلاك الرصيد</li>
+										<li>يدعم البث المباشر للقنوات مع اعادة البث لجميع اجهزة الشبكة بدون استهلاك الرصيد
+										(تستطيع بث مباريات من الانترنت مباشرة الى الشبكة)
+										</li>
 										<li>يدعم الالعاب الفلاشية بدون الاتصال بالانترنت</li>
 										<li>يدعم الترجمات بصيغة srt تلقائياً </li>
 										<li>خاصية البحث الذكي في الاقسام والملفات </li>
