--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
 										<li>خاصية البحث الذكي في الاقسام والملفات </li>
 									</ul>
 									<h4 style="font-size:20px;">تمتع بخدمة تليق بشبكتك !</h4>
-									<a href="http://www.mediafire.com/file/us1zef4w1e6xnrl/Estra7ah_Manager_2.0_Demo.exe" ><button class="btn try_btn" style=""><span class="fa fa-windows"></span> جرّب النظام الان مجاناً</button></a>
+									<a href="http://www.mediafire.com/file/us1zef4w1e6xnrl/Estra7ah_Manager_2.0_Demo.exe" >
+
+									<button class="btn try_btn" style="">
+									<div style="opacity: 0.7;font-size: 12px;font-style: italic;">100 تنزيل ! شكراً لكم</div>
+									<span class="fa fa-windows"></span> جرّب النظام الان مجاناً</button></a>
 									<button class="btn lic_btn" style=""> الرُخص المتاحة</button>
 									<script type="text/javascript">
 										$(".lic_btn").click(function(){
@@ -164,7 +168,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 				<div class="row">
 
 					<div class="sec" >
-						<div class="alert alert-danger ">
+						<div class="alert alert-danger " style="font-style: italic;">
 							لانسمح بتشغيل النسخه المجانيه في استراحتك الرئيسية بشكل تجاري .. النسخه المجانيه فقط لاستعراض واختبار فعالية النظام , يمكنك شراء رخصه تناسب شبكتك بسعر رمزي جداً يبدا من 20 دولار ! , شكراً لتفهمكم .
 						</div>
 					</div>
