--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 					    border-radius: 8px;
 					    top: 83px;
 					    font-size: 11px;
-    "><div>تم حجز 4 رخص شكراً لكم</div>تخفيض 50% لاول خمسة عملاء</div>
+    "><div>تم حجز 5 رخص شكراً لكم</div>العرض القادم سيكون بعد اصدار النسخه الثالثة</div>
 			<div class="container " id="prods">
 				<div class="row">
 					<div class="col-md-12 " style="color:#fff">
 						<div class="row">
 							<div class="col-md-8 col-xs-12 " style="color:#fff">
 								<div style="margin-top:130px;float: right;">
-									<h1 style="font-size:40px;">نقدم لك نظام Estra7ah Manager</h1>
+									<h1 style="font-size:40px;">نقدم لك نظام Estra7ah Manager <span style="font-size:12px;opacity: 0.5;font-style: italic;">الاصدار الثاني</span></h1>
 									<ul style="font-size:18px;">
 										<li>التحكم الكامل بسرعة المشاهدة وسرعه التنزيل للمستخدمين </li>
 										<li>يدعم معضم الصيغ  المشهورة لملفات الفيديو</li>
@@ -279,7 +279,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 						<div class="row">
 							<div class="col-md-8 " >
 								<div style="    padding: 57px;">
-									<h1>في الاصدار القادم</h1>
+									<h1>في الاصدار الثالث</h1>
 									<ul style="font-size: 15px;">
 										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقراءة والبحث في الكتب تدعم الهواتف </li>
 										<li>دعم صيغ اكثر واضافة ثيمات جديدة للاستراحة</li>
