--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<a href="http://www.mediafire.com/file/us1zef4w1e6xnrl/Estra7ah_Manager_2.0_Demo.exe" >
 
 									<button class="btn try_btn" style="">
-									<div style="opacity: 0.7;font-size: 12px;font-style: italic;">+100 تنزيل في يومين فقط</div>
+									<div style="opacity: 0.7;font-size: 12px;font-style: italic;">+100 تنزيل في اول يومين!</div>
 									<span class="fa fa-windows"></span> جرّب النظام الان مجاناً</button></a>
 									<button class="btn lic_btn" style=""> الرُخص المتاحة</button>
 									<script type="text/javascript">
