--- a/index.html
+++ b/index.html
@@ -95,15 +95,18 @@
 					    border-radius: 8px;
 					    top: 83px;
 					    font-size: 11px;
-    "><div>تم حجز 5 رخص مع الخصم .. شكراً لكم</div>العرض القادم سيكون بعد اصدار النسخه الثالثة</div>
+    "><div>تم حجز 5 رخص مع الخصم .. شكراً لكم</div>ادعم المبرمجين اليمنيين واشتري الترخيص بسعر رمزي</div>
 			<div class="container " id="prods">
 				<div class="row">
 					<div class="col-md-12 " style="color:#fff">
 						<div class="row">
 							<div class="col-md-8 col-xs-12 " style="color:#fff">
-								<div style="margin-top:130px;float: right;">
-									<h1 style="font-size:40px;">نقدم لك نظام Estra7ah Manager <span style="font-size:12px;opacity: 0.5;font-style: italic;">الاصدار الثاني</span></h1>
-									<ul style="font-size:18px;">
+								<div style="margin-top:110px;float: right;">
+									<h1 style="font-size:30px;">نقدم لك نظام Estra7ah Manager <span style="font-size:12px;opacity: 0.5;font-style: italic;">الاصدار الثاني</span></h1>
+									<ul style="font-size:15px;">
+										<li>لسنا مجله بل نظام متكامل يدير لك الاستراحه بشكل سهل ومميز وندعم كل ميزات المجلات الاخرى واكثر  </li>
+										<li>نظامنا لن يتعبك مثل المجلات الاخرى سيرفر النظام مضمن في ملف واحد exe بدون اي نسخ اعدادات او تعب نقل هذه الاعدادات .. وهو من اقوى السيرفرات الموجوده في تكنولوجيا ال Video Streaming </li>
+										<li>ملفات استراحتك تبقى كما هي ولن تنقل مجلد واحد فقط عند اضافة الاقسام تضيف المسارات الى النظام بكل سهولة .</li>
 										<li>التحكم الكامل بسرعة المشاهدة وسرعه التنزيل للمستخدمين </li>
 										<li>يدعم معضم الصيغ  المشهورة لملفات الفيديو</li>
 										<li>نظام ذكي يتعرف تلقائياً على الملفات والمجلدات</li>
