--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										<li>سريع الاستجابه حيث تم برمجته باحدث تقنيات الـ Video Streaming</li>
 										<li>يتميز بلوحة متعدده الخيارات وسهلة الاستخدام مع تصميم مميز وسهل </li>
 										<li>يدعم البث المباشر للقنوات مع اعادة البث لجميع اجهزة الشبكة بدون استهلاك الرصيد
-										(تستطيع بث مباريات من الانترنت مباشرة الى الشبكة)
+										(تستطيع بث مباريات بروابط IPTV من الانترنت مباشرة الى الشبكة)
 										</li>
 										<li>يدعم الالعاب الفلاشية بدون الاتصال بالانترنت</li>
 										<li>يدعم الترجمات بصيغة srt تلقائياً </li>
