--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<div style="margin-top:110px;float: right;">
 									<h1 style="font-size:30px;">نقدم لك نظام Estra7ah Manager <span style="font-size:12px;opacity: 0.5;font-style: italic;">الاصدار الثاني</span></h1>
 									<ul style="font-size:15px;">
-										<li>لسنا مجله بل نظام متكامل يدير لك الاستراحه بشكل سهل ومميز وندعم كل ميزات المجلات الاخرى واكثر  </li>
+										<li>نظامنا ليس مجله بل نظام متكامل يدير لك الاستراحه بشكل سهل ومميز وندعم كل ميزات المجلات الاخرى واكثر  </li>
 										<li>نظامنا لن يتعبك مثل المجلات الاخرى سيرفر النظام مضمن في ملف واحد exe بدون اي نسخ اعدادات او تعب نقل هذه الاعدادات .. وهو من اقوى السيرفرات الموجوده في تكنولوجيا ال Video Streaming </li>
 										<li>ملفات استراحتك تبقى كما هي ولن تنقل مجلد واحد فقط عند اضافة الاقسام تضيف المسارات الى النظام بكل سهولة .</li>
 										<li>التحكم الكامل بسرعة المشاهدة وسرعه التنزيل للمستخدمين </li>
