--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 				<div class="row">
 
 					<div class="sec" >
-						<div class="alert alert-danger " style="font-style: italic;">
-							لانسمح بتشغيل النسخه المجانيه في شبكتك الرئيسية بشكل تجاري .. النسخه المجانيه فقط لاستعراض واختبار فعالية النظام , يمكنك شراء رخصه تناسب شبكتك بسعر رمزي جداً يبدا من 20 دولار ! , شكراً لتفهمكم .
+						<div class="alert alert-warning " >
+							نرجو ان لاتقوم بتشغيل النسخه المجانيه في شبكتك الرئيسية بشكل تجاري .. النسخه المجانيه فقط لاستعراض واختبار فعالية النظام , يمكنك شراء رخصه تناسب شبكتك بسعر رمزي جداً يبدا من 20 دولار ! , شكراً لتفهمكم .
 						</div>
 					</div>
 					<div class="col-md-3 "  style="padding: 0px;">
