--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					    border-radius: 8px;
 					    top: 83px;
 					    font-size: 11px;
-    "><div>تم حجز 5 رخص مع الخصم .. شكراً لكم</div>سارع بطلب رخصتك الان مع الخصم</div>
+    "><div>انتهى العرض و تم حجز 5 رخص مع الخصم .. شكراً لكم</div></div>
 			<div class="container " id="prods">
 				<div class="row">
 					<div class="col-md-12 " style="color:#fff">
