--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 									<button class="btn try_btn" style="">
 									<div style="opacity: 0.7;font-size: 12px;font-style: italic;">+100 تنزيل في اول يومين!</div>
-									<span class="fa fa-windows"></span> جرّب النظام الان مجاناً</button></a>
+									<span class="fa fa-windows"></span> جرّب النظام الان مجاناً <span style="font-style: italic;opacity: 0.7;font-size: 12px;">Beta</span></button></a>
 									<button class="btn lic_btn" style=""> الرُخص المتاحة</button>
 									<script type="text/javascript">
 										$(".lic_btn").click(function(){
