--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 					<div class="sec" style="background: #333333;color: #fff;border-top:9px solid #74bc28">
 						<div class="row">
 							<div class="col-md-8 " >
-								<div style="    padding: 57px;">
+								<div style="padding: 22px;margin-top: 20px;margin-right: 22px;">
 									<h1>في الاصدار الثالث</h1>
 									<ul style="font-size: 15px;">
 										<li style="font-weight: bold">اصلاح الاخطاء الجوهرية في النظام .. شكراً لمختبرين البرنامج من فريقنا واصحاب الشكبات الذين اختبروا النظام وتواصلو بعنا بالاخطاء (شكراً لكم)</li>
