--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 								<div style="padding: 22px;margin-top: 20px;margin-right: 22px;">
 									<h1>في الاصدار الثالث</h1>
 									<ul style="font-size: 15px;">
-										<li style="font-weight: bold">اصلاح الاخطاء الجوهرية في النظام .. شكراً لمختبرين البرنامج من فريقنا واصحاب الشكبات الذين اختبروا النظام وتواصلو بعنا بالاخطاء (شكراً لكم)</li>
+										<li style="font-weight: bold">اصلاح الاخطاء الجوهرية في النظام .. شكراً لمختبرين البرنامج من فريقنا واصحاب الشكبات الذين اختبروا النظام وتواصلوا معنى بالاخطاء (شكراً لكم)</li>
 										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقراءة والبحث في الكتب تدعم الهواتف </li>
 										<li>دعم صيغ اكثر واضافة ثيمات جديدة للاستراحة</li>
 										<li>انشاء نظام ادارة مستخدمين لدعم التعليقات والتقييم</li>
