--- a/index.html
+++ b/index.html
@@ -267,7 +267,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 						</div>
 						<div class="sec" id="connect" style="padding: 53px;text-align: center;font-size: 20px;">
 							لطلب النسخه ارسل راسله طلب الى الايميل YeTech.Devs@gmail.com وسيتم ارسال رسالة بملف الترخيص + نسخه من النظام  (نتعامل بالتحويل الى الكريمي حالياً) 
-							<div style="margin:20px;padding: 20px;background: #eee;"><a href="mailto:YeTech.Devs@gmail.com">YeTech.Devs@gmail.com</a></div>
+							<div style="margin-top:20px;padding: 20px;" class="alert alert-info" >
+								<a href="mailto:YeTech.Devs@gmail.com">YeTech.Devs@gmail.com</a>
+							</div>
+							
+							<div class="alert alert-success" >
+								عند شراء رخصه سيتواصل معك احد مهندسينا عبر الواتساب او عبر TeamViewer لكي يركب النظام على شبكتك مجاناً .. ويمكنك ارسال استفساراتك او اقتراحاتك على ايميلنا في اي وقت .
+							</div>
 						</div>
 					</div>
 
@@ -376,12 +382,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 									</div>
 								</div>
 								<div class="col-md-4 " style="margin-top: 20px;" >
-	
+									<div>اهدافنا</div>
 									<ul>
 										
-										<li>لطلب نسخه من النظام ارسل رسالة الى  
-											<a href="mailto:YeTech.Devs@gmail.com">YeTech.Devs@gmail.com</a>
-										</li>
+										<li>متابعه تطوير التقنيات والبرامج في السوق اليمني (رغم الحرب)</li>
+										<li>متابعه تطوير التقنيات والبرامج في السوق اليمني </li>
 									</ul>
 
 								</div>
