--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 							<ul>
 								<li>ويندوز 7 او احدث</li>
 								<li>معالج Intel® Core™ i3  او احدث</li>
-								<li>ذاكرة عشوائية بحجم 1 جيجا او اكثر (ليدعم الـStreaming)</li>
+								<li>ذاكرة وصول عشوائي بحجم 1 جيجا او اكثر (ليدعم الـStreaming)</li>
 								<li>مساحة 300 ميجا بايت فارغة لتحميل النظام </li>
 							</ul>
 							<hr>
