--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
 					    border-radius: 8px;
 					    top: 83px;
 					    font-size: 11px;
-    "><div>انتهى العرض و تم حجز 5 رخص مع الخصم .. شكراً لكم</div></div>
+    "><div>حصرياً .. خصم 20% لاول خمسة رخص تباع من النظام</div></div>
 			<div class="container " id="prods">
 				<div class="row">
 					<div class="col-md-12 " style="color:#fff">
 						<div class="row">
 							<div class="col-md-8 col-xs-12 " style="color:#fff">
-								<div style="margin-top:110px;float: right;">
-									<h1 style="font-size:30px;">نقدم لك نظام Estra7ah Manager <span style="font-size:12px;opacity: 0.5;font-style: italic;">الاصدار الثاني</span></h1>
+								<div style="margin-top:100px;float: right;">
+									<h1 style="font-size:30px;">نقدم لك نظام Estra7ah Manager <span style="font-size:12px;opacity: 0.6;font-style: italic;">الاصدار 2.5</span></h1>
 									<ul style="font-size:15px;">
+										<li style="font-weight: bold;font-size: 20px;">تم اصلاح جميع اخطاء الاستايل على الهواتف وتحسين جودة العرض</li>
 										<li>نظامنا ليس مجله بل نظام متكامل يدير لك الاستراحه بشكل سهل ومميز وندعم كل ميزات المجلات الاخرى واكثر  </li>
 										<li>نظامنا لن يتعبك مثل المجلات الاخرى سيرفر النظام مضمن في ملف واحد exe بدون اي نسخ اعدادات او تعب نقل هذه الاعدادات .. وهو من اقوى السيرفرات الموجوده في تكنولوجيا ال Video Streaming </li>
 										<li>ملفات استراحتك تبقى كما هي ولن تنقل مجلد واحد فقط عند اضافة الاقسام تضيف المسارات الى النظام بكل سهولة .</li>
@@ -121,11 +122,11 @@
 										<li>خاصية البحث الذكي في الاقسام والملفات </li>
 									</ul>
 									<h4 style="font-size:20px;">تمتع بخدمة تليق بشبكتك !</h4>
-									<a href="http://www.mediafire.com/file/us1zef4w1e6xnrl/Estra7ah_Manager_2.0_Demo.exe" >
+									<a target="_blank" href="http://www.mediafire.com/file/crd8zqw3odkzjrt/Estra7ah_Manager_2.5_Demo.exe" >
 
 									<button class="btn try_btn" style="">
-									<div style="opacity: 0.7;font-size: 12px;font-style: italic;">+100 تنزيل في اول يومين!</div>
-									<span class="fa fa-windows"></span> جرّب النظام الان مجاناً <span style="font-style: italic;opacity: 0.7;font-size: 12px;">Beta</span></button></a>
+									<div style="opacity: 0.7;font-size: 12px;font-style: italic;"></div>
+									<span class="fa fa-windows"></span> جرّب الاصدار 2.5 مجاناً لمدة شهر كامل</button></a>
 									<button class="btn lic_btn" style=""> الرُخص المتاحة</button>
 									<script type="text/javascript">
 										$(".lic_btn").click(function(){
@@ -170,11 +171,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 			<div class="container" id="buy" style="">
 				<div class="row">
 
-					<div class="sec" >
-						<div class="alert alert-warning " >
-							نرجو ان لاتقوم بتشغيل النسخه التجريبية في شبكتك الرئيسية بشكل تجاري .. النسخه التجريبية فقط لاستعراض واختبار فعالية النظام , يمكنك شراء رخصه تناسب شبكتك بسعر رمزي جداً يبدا من 20 دولار ! , شكراً لتفهمكم .
-						</div>
-					</div>
+
 					<div class="col-md-3 "  style="padding: 0px;">
 						<div class="sec" style="height: 475px;">
 							<div class="title"> ترخيص محلي</div>
